# wattaouille

./: .gitattributes  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: lib.rs  main.rs
