[package]
name = "wattaouille"
version = "1.3.5"
edition = "2024"
description = "Live CPU and energy monitor for Linux laptops — finds what's spinning your fan and how many watts it's burning"
license = "MPL-2.0"
repository = "https://github.com/wdes/wattaouille"

[lib]
name = "wattaouille"
path = "src/lib.rs"

[[bin]]
name = "wattaouille"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Sensor math requires constant casting between u64/i64/f64/usize
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# Long match arms in pretty_known process labelling
too_many_lines = "allow"
# Common short names in sensor code (e.g. en/ef, rx/tx, bp/br)
similar_names = "allow"

[dependencies]
# Clean Ctrl+C / SIGTERM handler so we can restore the terminal state
# (alt screen exit + cursor show) on interrupt instead of leaving the user
# stuck with an invisible cursor / no echo.
ctrlc = { version = "3.4", features = ["termination"] }
# Termios bindings so we can disable echo/canonical mode while the alt
# screen is up — otherwise mouse scroll inside the alt screen sends
# arrow-key escape sequences that the terminal echoes back as visible
# garbage. Already pulled in transitively by `ctrlc`'s nix dep, made
# explicit here so the API is part of our contract.
libc = "0.2"
