[package]
name = "wattaouille"
version = "1.3.5"
edition = "2024"
rust-version = "1.92"
authors = ["William Desportes <williamdes@wdes.fr>"]
description = "Live CPU and energy monitor for Linux laptops — finds what's spinning your fan and how many watts it's burning"
license = "MPL-2.0"
homepage = "https://github.com/wdes/wattaouille#readme"
repository = "https://github.com/wdes/wattaouille"
readme = "README.md"
keywords = ["cpu", "energy", "power", "rapl", "monitor"]
categories = ["command-line-utilities", "hardware-support"]
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE", "/README.md", "/CHANGELOG.md"]

[lib]
name = "wattaouille"
path = "src/lib.rs"

[[bin]]
name = "wattaouille"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Sensor math requires constant casting between u64/i64/f64/usize
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# Long match arms in pretty_known process labelling
too_many_lines = "allow"
# Common short names in sensor code (e.g. en/ef, rx/tx, bp/br)
similar_names = "allow"

[package.metadata.deb]
section = "utils"
priority = "optional"
depends = "libc6, libgcc-s1"
maintainer = "William Desportes <williamdes@wdes.fr>"
extended-description = "Live CPU and energy monitor for Linux laptops. Shows per-process CPU usage and estimates per-process wattage using Intel RAPL. Features session leaderboard, process tree view, battery cross-check, and browser/IDE process grouping."

[dependencies]
# Clean Ctrl+C / SIGTERM handler so we can restore the terminal state
# (alt screen exit + cursor show) on interrupt instead of leaving the user
# stuck with an invisible cursor / no echo.
ctrlc = { version = "3.4", features = ["termination"] }
# Termios bindings so we can disable echo/canonical mode while the alt
# screen is up — otherwise mouse scroll inside the alt screen sends
# arrow-key escape sequences that the terminal echoes back as visible
# garbage. Already pulled in transitively by `ctrlc`'s nix dep, made
# explicit here so the API is part of our contract.
libc = "0.2"
